--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           </li>
           <li class="links__link">
             <p class="links__title">Эл. почта</p>
-            <a class="linsk__link" href="yaranderevyankin@gmail.com"
-              >yaranderevyankin@gmail.com</a
+            <a class="linsk__link" href="sigmaboy@gmail.com"
+              >sigmaboy@gmail.com</a
             >
           </li>
           <li class="links__link">
